--- a/PlatformUI/MainPage.xaml
+++ b/PlatformUI/MainPage.xaml
@@ -31,8 +31,7 @@
             <Button
                 x:Name="CounterBtn"
                 Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
+                Clicked="OnButtonClicked"
                 HorizontalOptions="Center" />
 
         </VerticalStackLayout>
